--- a/arapp.json
+++ b/arapp.json
@@ -1,5 +1,5 @@
 {
-  "appName": "app.aragonpm.test",
+  "appName": "app.open.aragonpm.eth",
   "version": "1.0.0",
   "roles": [],
   "path": "contracts/App.sol"
