--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "@aragon/os": "^3.0.2"
+    "@aragon/client": "^1.0.0-beta.7",
+    "@aragon/os": "^3.1.3"
   },
   "devDependencies": {
-    "@aragon/cli": "^2.0.0"
+    "@aragon/cli": "^2.2.0"
   },
   "scripts": {
     "test": "truffle test",
