--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@aragon/os": "^3.1.3"
   },
   "devDependencies": {
-    "@aragon/cli": "^2.2.0"
+    "@aragon/cli": "^2.2.0",
+    "truffle": "^4.1.7"
   },
   "scripts": {
     "test": "truffle test",
