--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "truffle test",
-    "compile": "truffle compile",
+    "build": "truffle compile",
     "start": "aragon run",
     "deploy": "truffle exec scripts/deploy.js --network rpc",
     "publish": "aragon publish \"$(npm run deploy | tail -n 1)\""
