--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,7 @@
   "icons": [{
     "src": "images/icon.png",
     "sizes": "192x192"
-  }]
+  }],
+  "start_url": "/dist/index.html",
+  "script": "/dist/script.js"
 }
