--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
+  "name": "app-name",
+  "version": "1.0.0",
+  "description": "",
   "dependencies": {
     "@aragon/client": "^1.0.0-beta.7",
     "@aragon/os": "^3.1.3"
   },
   "devDependencies": {
     "@aragon/cli": "^2.2.0",
+    "parcel-bundler": "^1.8.1",
     "truffle": "^4.1.7"
   },
   "scripts": {
     "test": "truffle test",
-    "build": "truffle compile",
+    "build:app": "parcel build app/index.html -d dist/ --public-url '.'",
+    "build:script": "parcel build app/script.js -d dist/",
+    "build": "npm run build:app && npm run build:script",
     "start": "aragon run",
-    "deploy": "truffle exec scripts/deploy.js --network rpc",
+    "deploy": "truffle exec scripts/deploy.js --network development",
     "publish": "aragon publish \"$(npm run deploy | tail -n 1)\""
   },
   "keywords": [],
