--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "dependencies": {
     "@aragon/client": "^1.0.0-beta.7",
-    "@aragon/os": "^3.1.3"
+    "@aragon/os": "3.1.6"
   },
   "devDependencies": {
     "@aragon/cli": "^2.2.0",
     "parcel-bundler": "^1.8.1",
-    "truffle": "^4.1.7"
+    "truffle": "4.0.5"
   },
   "scripts": {
     "test": "truffle test",
