--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@aragon/os": "3.1.6"
   },
   "devDependencies": {
-    "@aragon/cli": "^2.2.0",
+    "@aragon/cli": "^4.0.0",
     "parcel-bundler": "^1.8.1",
     "truffle": "4.0.5"
   },
@@ -18,7 +18,7 @@
     "build": "npm run build:app && npm run build:script",
     "start": "aragon run",
     "deploy": "aragon deploy",
-    "publish": "aragon publish"
+    "publish": "apm publish"
   },
   "keywords": [],
   "license": "GPL-3.0"
