--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Application",
   "description": "An application for Aragon",
   "icons": [{
-    "src": "images/icon.png",
+    "src": "/dist/images/icon.png",
     "sizes": "192x192"
   }],
   "start_url": "/dist/index.html",
