--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@aragon/client": "^1.0.0-beta.8",
-    "@aragon/os": "3.1.6"
+    "@aragon/client": "^1.1.0",
+    "@aragon/os": "^4.0.1"
   },
   "devDependencies": {
-    "@aragon/cli": "^4.0.6",
-    "parcel-bundler": "^1.8.1",
-    "truffle": "4.0.5"
+    "@aragon/cli": "^5.2.2",
+    "parcel-bundler": "^1.11.0"
   },
   "scripts": {
-    "test": "truffle test",
-    "build:app": "parcel build app/index.html -d dist/ --public-url '.'",
-    "build:script": "parcel build app/script.js -d dist/",
-    "build": "npm run build:app && npm run build:script",
     "start": "aragon run",
+    "test": "aragon contracts test",
+    "compile": "aragon contracts compile",
     "deploy": "aragon deploy",
-    "publish": "aragon apm publish"
+    "build:app": "parcel build app/index.html -d dist/ --public-url '.' --no-cache",
+    "build:script": "parcel build app/script.js -d dist/ --no-cache",
+    "build": "npm run build:app && npm run build:script",
+    "publish:patch": "aragon apm publish patch",
+    "publish:minor": "aragon apm publish minor",
+    "publish:major": "aragon apm publish major",
+    "versions": "aragon apm versions"
   },
   "keywords": [],
   "license": "MIT"
