--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@aragon/os": "^4.0.1"
   },
   "devDependencies": {
-    "@aragon/cli": "^5.4.0-beta.1",
+    "@aragon/cli": "^5.4.0",
     "parcel-bundler": "^1.11.0"
   },
   "scripts": {
