Fix app build on windows

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "aragon contracts test",
     "compile": "aragon contracts compile",
     "deploy": "aragon deploy",
-    "build:app": "parcel build app/index.html -d dist/ --public-url '.' --no-cache",
+    "build:app": "parcel build app/index.html -d dist/ --public-url \".\" --no-cache",
     "build:script": "parcel build app/script.js -d dist/ --no-cache",
     "build": "npm run build:app && npm run build:script",
     "publish:patch": "aragon apm publish patch",
