Small changes to be compatible with new publish script

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
 {
   "name": "Application",
   "description": "An application for Aragon",
-  "icons": [{
-    "src": "/dist/images/icon.png",
-    "sizes": "192x192"
-  }],
-  "start_url": "/dist/index.html",
-  "script": "/dist/script.js"
+  "icons": [
+    {
+      "src": "/images/icon.png",
+      "sizes": "192x192"
+    }
+  ],
+  "start_url": "/index.html",
+  "script": "/script.js"
 }
