--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "@aragon/cli": "^6.0.0",
-    "parcel-bundler": "^1.11.0"
+    "parcel-bundler": "^1.11.0",
+    "truffle": "^4.1.14"
   },
   "scripts": {
     "prepublishOnly": "aragon contracts compile",
