--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@aragon/test-helpers": "^2.0.0",
     "cross-env": "^5.2.0",
     "eth-ens-namehash": "^2.0.8",
+    "ganache-cli": "^6.0.0",
     "parcel-bundler": "^1.11.0",
     "truffle": "4.1.14"
   },
