--- a/package.json
+++ b/package.json
@@ -3,21 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@aragon/client": "^1.1.0",
-    "@aragon/os": "^4.2.1"
+    "@aragon/api": "^2.0.0-beta.8",
+    "@aragon/os": "^4.3.0",
+    "@aragon/truffle-config-v4": "^1.0.0"
   },
   "devDependencies": {
-    "@aragon/cli": "^6.0.0",
+    "@aragon/cli": "^6.4.1",
     "@aragon/test-helpers": "^2.0.0",
+    "@babel/core": "^7.7.5",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/register": "^7.7.4",
+    "ava": "^2.4.0",
     "cross-env": "^5.2.0",
     "eth-ens-namehash": "^2.0.8",
+    "execa": "^3.4.0",
+    "kill-port": "^1.6.0",
     "parcel-bundler": "^1.11.0",
+    "ps-tree": "^1.2.0",
     "truffle": "4.1.14"
   },
   "scripts": {
     "start": "aragon run --files dist",
-    "test": "cross-env TRUFFLE_TEST=true npm run ganache-cli:test",
-    "compile": "aragon contracts compile",
+    "test:contracts": "cross-env TRUFFLE_TEST=true npm run ganache-cli:test",
+    "test": "ava",
+    "pretest": "ava test/*.pretest.js",
+    "posttest": "ava test/*.posttest.js",
+    "compile": "truffle compile",
     "deploy": "aragon deploy",
     "build:app": "parcel build app/index.html -d dist/ --public-url \".\" --no-cache",
     "build:script": "parcel build app/script.js -d dist/ --no-cache",
@@ -29,5 +41,28 @@
     "ganache-cli:test": "sh ./node_modules/@aragon/test-helpers/ganache-cli.sh"
   },
   "keywords": [],
-  "license": "MIT"
+  "license": "MIT",
+  "ava": {
+    "require": [
+      "@babel/polyfill",
+      "@babel/register"
+    ],
+    "files": [
+      "test/**/*.test.js"
+    ]
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "corejs": "3",
+          "targets": {
+            "node": true
+          }
+        }
+      ]
+    ]
+  }
 }
