Remove .tmp, add test setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,25 @@
+# Editor files
+.vscode
+
 # Dependencies
 node_modules
+# this is created by windows when installing go-ipfs
+ipfs.cmd
 
-# Build dirs
-.cache/
-build/
-dist/
+# Artifacts
+dist
+build
+
+# Tests and coverage
+.tmp
+coverage
+.nyc_output
+
+# Tools
+lerna-debug.log
+
+# Extra
+packages/aragon-cli/src/knownRoles.json
+
+## Lockfiles that are not shrinkwraps
+package-lock.json
