--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@aragon/truffle-config-v4": "^1.0.0"
   },
   "devDependencies": {
-    "@aragon/cli": "^6.4.1",
+    "@aragon/cli": "^7.0.0-beta.1",
     "@aragon/test-helpers": "^2.0.0",
     "@babel/core": "^7.7.5",
     "@babel/polyfill": "^7.7.0",
@@ -25,10 +25,10 @@
   },
   "scripts": {
     "start": "aragon run --files dist",
-    "test:contracts": "cross-env TRUFFLE_TEST=true npm run ganache-cli:test",
-    "test": "ava",
-    "pretest": "ava test/*.pretest.js",
-    "posttest": "ava test/*.posttest.js",
+    "test:contracts": "truffle test --network rpc",
+    "test": "ava --verbose",
+    "pretest": "node scripts/setup-integration-tests.js",
+    "posttest": "node scripts/teardown-integration-tests.js",
     "compile": "truffle compile",
     "deploy": "aragon deploy",
     "build:app": "parcel build app/index.html -d dist/ --public-url \".\" --no-cache",
