Remove pre/post tests && ignore tmp folder

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "start": "aragon run --files dist",
     "test:contracts": "cross-env TRUFFLE_TEST=true npm run ganache-cli:test",
     "test": "ava",
-    "pretest": "ava test/*.pretest.js",
-    "posttest": "ava test/*.posttest.js",
+    "pretest": "node scripts/setup-integration-tests.js",
+    "posttest": "node scripts/teardown-integration-tests.js",
     "compile": "truffle compile",
     "deploy": "aragon deploy",
     "build:app": "parcel build app/index.html -d dist/ --public-url \".\" --no-cache",
