--- a/.gitignore
+++ b/.gitignore
@@ -10,24 +10,10 @@ ipfs.cmd
 dist
 build
 
-# Tests and coverage
-.tmp
-coverage
-.nyc_output
-
-# Tools
-lerna-debug.log
-
-# Extra
-packages/aragon-cli/src/knownRoles.json
-
-<<<<<<< HEAD
-# Build dirs
+# Cache
 .cache/
 .tmp/
-build/
-dist/
-=======
-## Lockfiles that are not shrinkwraps
+
+# Lockfiles
 package-lock.json
->>>>>>> a3df05fb470814bec3296772b4a9b6121dcd1a35
+
