--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -33,11 +33,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm install
-      - name: Build
-        run: npm run build
       - name: Setup tests
         run: npm run pretest
       - name: Test
-        run: npm run test:coverage
+        run: npm run test
       - name: Cleanup tests
         run: npm run posttest
