--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,6 @@ before_script:
 install:
   - npm install
 script:
-  - npm run lint
   - npm run pretest
-  - npm run test:coverage
+  - npm run test
   - npm run posttest
-after_success:
-  - test $TRAVIS_NODE_VERSION = "11" && npm run report-coverage
