--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "@aragon/truffle-config-v4": "^1.0.0"
   },
   "devDependencies": {
+    "@aragon/cli": "^7.0.0-beta.9",
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/register": "^7.7.4",
     "ava": "^2.4.0",
-    "execa": "^3.4.0",
-    "node-fetch": "^2.6.0",
     "parcel-bundler": "^1.11.0",
-    "truffle": "4.1.14"
+    "truffle": "^5.1.14"
   },
   "scripts": {
     "start": "aragon run --files dist",
