--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,3 +35,10 @@ jobs:
         run: npm install
       - name: Test
         run: npm run test
+      - name: Test to run the app
+        run: npm run start
+      - name: Test to publish the app
+        run: npm run publish:major
+      - name: Test to fetch versions published
+        run: npm run versions
+
