--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "@aragon/truffle-config-v5": "^1.0.0"
   },
   "devDependencies": {
-    "@aragon/cli": "^7.0.0-beta.9",
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/register": "^7.7.4",
-    "ava": "^2.4.0",
+    "@aragon/cli": "^7.0.1",
+    "@aragon/test-helpers": "^2.0.0",
+    "cross-env": "^6.0.3",
     "parcel-bundler": "^1.11.0",
     "truffle": "^5.1.4"
   },
   "scripts": {
     "start": "aragon run --files dist",
+    "test": "cross-env TRUFFLE_TEST=true npm run ganache-cli:test",
     "versions": "aragon apm versions",
     "build": "npm run build:app && npm run build:script",
     "build:app": "parcel build app/index.html -d dist/ --public-url \".\" --no-cache",
@@ -26,33 +25,8 @@
     "publish:patch": "aragon apm publish patch --files dist",
     "publish:minor": "aragon apm publish minor --files dist",
     "publish:major": "aragon apm publish major --files dist",
-    "test": "ava --verbose",
-    "clean": "git clean -fixd",
-    "pretest": "node test/scripts/setup-tests.js",
-    "posttest": "node test/scripts/teardown-tests.js"
+    "ganache-cli:test": "sh ./node_modules/@aragon/test-helpers/ganache-cli.sh"
   },
   "keywords": [],
-  "license": "MIT",
-  "ava": {
-    "require": [
-      "@babel/register"
-    ],
-    "files": [
-      "test/*.test.js"
-    ]
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "useBuiltIns": "usage",
-          "corejs": "3",
-          "targets": {
-            "node": true
-          }
-        }
-      ]
-    ]
-  }
+  "license": "MIT"
 }
