--- a/package.json
+++ b/package.json
@@ -3,30 +3,28 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@aragon/client": "^1.1.0",
-    "@aragon/os": "^4.2.1"
+    "@aragon/api": "^2.0.0-beta.8",
+    "@aragon/os": "^4.3.0",
+    "@aragon/truffle-config-v5": "^1.0.0"
   },
   "devDependencies": {
-    "@aragon/cli": "^6.0.0",
+    "@aragon/cli": "^7.0.1",
     "@aragon/test-helpers": "^2.0.0",
-    "cross-env": "^5.2.0",
-    "eth-ens-namehash": "^2.0.8",
-    "ganache-cli": "^6.0.0",
+    "cross-env": "^6.0.3",
     "parcel-bundler": "^1.11.0",
-    "truffle": "4.1.14"
+    "truffle": "^5.1.4"
   },
   "scripts": {
     "start": "aragon run --files dist",
     "test": "cross-env TRUFFLE_TEST=true npm run ganache-cli:test",
-    "compile": "aragon contracts compile",
-    "deploy": "aragon deploy",
+    "versions": "aragon apm versions",
+    "build": "npm run build:app && npm run build:script",
     "build:app": "parcel build app/index.html -d dist/ --public-url \".\" --no-cache",
     "build:script": "parcel build app/script.js -d dist/ --no-cache",
-    "build": "npm run build:app && npm run build:script",
-    "publish:patch": "aragon apm publish patch",
-    "publish:minor": "aragon apm publish minor",
-    "publish:major": "aragon apm publish major",
-    "versions": "aragon apm versions",
+    "deploy": "aragon deploy",
+    "publish:patch": "aragon apm publish patch --files dist",
+    "publish:minor": "aragon apm publish minor --files dist",
+    "publish:major": "aragon apm publish major --files dist",
     "ganache-cli:test": "sh ./node_modules/@aragon/test-helpers/ganache-cli.sh"
   },
   "keywords": [],
